[gd_scene load_steps=11 format=2]

[ext_resource path="res://content/map/chamber/nest/NestCave.gd" type="Script" id=1]
[ext_resource path="res://content/sounds/Locations/ChamberNest/Biome_Cricket.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/Locations/ChamberNest/Biome_Birds.wav" type="AudioStream" id=3]
[ext_resource path="res://content/map/chamber/nest/petchamber.png" type="Texture" id=4]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=5]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/drop/egg/focus.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=111]
animations = [ {
"frames": [ SubResource( 113 ) ],
"loop": false,
"name": "egged",
"speed": 1.0
}, {
"frames": [ SubResource( 112 ) ],
"loop": false,
"name": "empty",
"speed": 1.0
} ]

[node name="NestCave" type="Node2D" groups=["saveable"]]
z_index = -10
script = ExtResource( 1 )
minRelativeDepth = 0.75
maxRelativeDepth = 1.0

[node name="GizmoSpawn" type="Position2D" parent="."]
position = Vector2( 27, 27 )
z_index = 50

[node name="AmbCricket" parent="GizmoSpawn" instance=ExtResource( 6 )]
stream = ExtResource( 2 )
volume_db = 6.0
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 72.0
minAudibleDistance = 24.0
fadeInTime = 0.5
fadeOutTime = 0.5
loop = true

[node name="AmbBird" parent="GizmoSpawn" instance=ExtResource( 6 )]
stream = ExtResource( 3 )
volume_db = 6.0
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 48.0
minAudibleDistance = 24.0
fadeInTime = 0.5
fadeOutTime = 0.5
loop = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 24, 24 )
frames = SubResource( 111 )
animation = "egged"

[node name="FocusMarker" type="Sprite" parent="."]
position = Vector2( 27, 27 )
texture = ExtResource( 7 )

[node name="Usable" parent="." instance=ExtResource( 5 )]
position = Vector2( 27, 27 )
visibleOnFocus = NodePath("../FocusMarker")
